# test-sorting-algorithms

./: CMakeLists.txt  LICENSE.txt  README.md  algorithms.cpp  algorithms.hpp  main.cpp  main_thread.cpp  main_threads.cpp  makefile  readme.txt  tools.cpp  tools.hpp
include/: algorithms.hpp  tools.hpp
source/: algorithms.cpp  tools.cpp
